--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "private": false,
   "scripts": {
     "build": "tsc",
-    "prepublish": "tsc"
+    "prepublish": "tsc",
+    "test": "glob src/**/*.test.ts -c 'tsx --test'"
   },
   "devDependencies": {
-    "@types/node": "^14.0.13",
-    "typescript": "^3.9.5"
+    "@types/node": "^20.11.0",
+    "glob": "^10.3.10",
+    "tsx": "^4.7.0",
+    "typescript": "5.3.3"
   }
 }
